import "Dat_General.proto";

package ProtoBuf;  

message DAT_UserData
{
	required string uid = 1; // 玩家UID
	required string nickname = 2; // 玩家昵称
	required int32 lv = 3; // 玩家等级
	required int32 experience = 4; // 经验值
	required string roleId = 5; // 玩家角色id

	required int32 strength = 6; // 力量属性
	required int32 magic = 7; // 魔法属性
	required int32 agility = 8; // 敏捷度
	required DAT_ElementProperty elementProperty = 9; // 玩家元素属性

	repeated string heroes = 10; // 玩家拥有的所有英雄

	repeated string teams = 11; // 玩家的队伍

	required int32 gold = 12; // 玩家有的金币
	required int32 gem = 13; // 玩家有的钻石

	required DAT_ElementProperty keys = 14; // 玩家的钥匙
}